# tuxnes

./: .gitmodules  AUTHORS  BUGS  CHANGES  ChangeLog  INSTALL.BSD  Makefile.am  Makefile.in  NEWS  README  THANKS  acconfig.h  autogen.sh  comptbl.c  config.h.in  configure  configure.ac  configure.in  consts.h  dynrec.c  emu.c  gamegenie.c  gamegenie.h  ggi.c  globals.h  io.c  mapper.c  pixels.h  renderer.c  renderer.h  sound.c  sound.h  table.x86  tuxnes.xpm  tuxnes2.xpm  x11.c  ziploader.c
src/: Makefile.am  comptbl.c  consts.h  controller.c  controller.h  d6502.c  dynrec.c  emu.c  fb.c  gamegenie.c  gamegenie.h  ggi.c  globals.h  io.c  joystick.c  joystick.h  loader.c  loader.h  mapper.c  mapper.h  ntsc_pal.c  pixels.h  renderer.c  renderer.h  romfixer  screenshot.c  screenshot.h  sound.c  sound.h  table.x86  unzip.c  unzip.h  w.c  x11.c  x86.S  ziploader.c  ziploader.h
